--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/soccer-logo.jpg" alt="Soccer Logo" class="logo">
         <h1>Soccer Hub</h1>
         <nav>
             <a href="index.html">Home</a>
