--- a/HTML/news.html
+++ b/HTML/news.html
@@ -29,9 +29,17 @@
                 <p>Catch the latest results and highlights.</p>
             </article>
         </section>
+        <section id="live-scores">
+            <h2>Live Soccer Scores</h2>
+            <div id="scores-container">
+                <!-- Live scores will be loaded here -->
+                <p>Loading live scores...</p>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Soccer Hub</p>
     </footer>
+    <script src="js/scores.js"></script>
 </body>
 </html>
