--- a/HTML/about.html
+++ b/HTML/about.html
@@ -24,7 +24,9 @@
             <div class="about-details">
                 <div>
                     <h3>History of Soccer</h3>
-                    <p>Soccer dates back to ancient times, evolving into the global phenomenon it is today.</p>
+                    <p>Soccer, known as football outside of North America, has a rich history that spans centuries, making it one of the oldest and most beloved sports in the world. The origins of the game can be traced back to ancient civilizations, where variations of ball-kicking games were played. In China, a sport called Cuju, which involved kicking a leather ball into a net, was popular during the Han Dynasty (206 BC–220 AD). Similar games also emerged in ancient Greece, Rome, and parts of Central America, though these early forms of soccer were often more violent and less structured than the modern game.
+
+The foundations of modern soccer were laid in England during the 19th century. By this time, informal versions of the game were played in villages and schools, often with varying rules. In 1863, the Football Association (FA) was established in England to standardize the rules of the game, creating the framework for association football. This marked the split between soccer and rugby, as the FA’s rules prohibited handling the ball. The sport's popularity grew rapidly, spreading to other parts of Europe and the world through British influence, particularly during the colonial era. By the early 20th century, international competitions emerged, and in 1930, the first FIFA World Cup was held, cementing soccer's place as a global phenomenon. Today, soccer transcends cultures and borders, uniting billions of fans and players with its simplicity, excitement, and universal appeal.</p>
                 </div>
                 <div>
                     <h3>Why We Love Soccer</h3>
