--- a/HTML/about.html
+++ b/HTML/about.html
@@ -19,19 +19,12 @@
     </header>
     <main>
         <section class="about-content">
-            <h2>About Soccer Hub</h2>
-            <p>Soccer is the most popular sport worldwide, enjoyed by billions of fans.</p>
-            <div class="about-details">
-                <div>
-                    <h3>History of Soccer</h3>
-                    <p>Soccer, known as football outside of North America, has a rich history that spans centuries, making it one of the oldest and most beloved sports in the world. The origins of the game can be traced back to ancient civilizations, where variations of ball-kicking games were played. In China, a sport called Cuju, which involved kicking a leather ball into a net, was popular during the Han Dynasty (206 BC–220 AD). Similar games also emerged in ancient Greece, Rome, and parts of Central America, though these early forms of soccer were often more violent and less structured than the modern game.
-
-The foundations of modern soccer were laid in England during the 19th century. By this time, informal versions of the game were played in villages and schools, often with varying rules. In 1863, the Football Association (FA) was established in England to standardize the rules of the game, creating the framework for association football. This marked the split between soccer and rugby, as the FA’s rules prohibited handling the ball. The sport's popularity grew rapidly, spreading to other parts of Europe and the world through British influence, particularly during the colonial era. By the early 20th century, international competitions emerged, and in 1930, the first FIFA World Cup was held, cementing soccer's place as a global phenomenon. Today, soccer transcends cultures and borders, uniting billions of fans and players with its simplicity, excitement, and universal appeal.</p>
-                </div>
-                <div>
-                    <h3>Why We Love Soccer</h3>
-                    <p>Soccer unites people and showcases incredible athleticism.</p>
-                </div>
+            <h2>History of Soccer</h2>
+            <div class="history-section">
+                <img src="images/pele.jpg" alt="Pele celebrating a goal" class="history-image">
+                <p>Soccer, known as football outside of North America, has a rich history that spans centuries, making it one of the oldest and most beloved sports in the world. The origins of the game can be traced back to ancient civilizations, where variations of ball-kicking games were played. In China, a sport called <strong>Cuju</strong>, which involved kicking a leather ball into a net, was popular during the Han Dynasty (206 BC–220 AD). Similar games also emerged in ancient Greece, Rome, and parts of Central America.</p>
+                <p>The foundations of modern soccer were laid in England during the 19th century. By this time, informal versions of the game were played in villages and schools, often with varying rules. In 1863, the <strong>Football Association</strong> (FA) was established in England to standardize the rules of the game, creating the framework for association football. This marked the split between soccer and rugby. By the early 20th century, international competitions emerged, and in 1930, the first FIFA World Cup was held, cementing soccer's place as a global phenomenon.</p>
+                <p>Players like <strong>Pelé</strong>, the Brazilian legend who won three FIFA World Cups, became global icons and solidified soccer's status as the world's most popular sport. Pelé's image, celebrating goals with unmatched passion and grace, remains a symbol of soccer's unifying power across cultures and generations.</p>
             </div>
         </section>
     </main>
