--- a/HTML/player.html
+++ b/HTML/player.html
@@ -23,12 +23,14 @@
             <div class="player-card">
                 <img src="images/messi.jpg" alt="Lionel Messi">
                 <h3>Lionel Messi</h3>
-                <p>One of the greatest players in history.</p>
+                <p>Lionel Messi, often regarded as one of the greatest soccer players in history, has captivated fans worldwide with his extraordinary skill, vision, and consistency. Born in Rosario, Argentina, Messi joined FC Barcelona's youth academy, La Masia, at a young age and quickly rose through the ranks. Known for his incredible dribbling ability, pinpoint accuracy, and an uncanny sense of the game, Messi has broken countless records, including the most goals scored for a single club and multiple Ballon d'Or awards. His success extends to the international stage, where he led Argentina to victory in the 2021 Copa América and the 2022 FIFA World Cup, cementing his legacy as a national hero and global icon.
+
+</p>
             </div>
             <div class="player-card">
                 <img src="images/ronaldo.jpg" alt="Cristiano Ronaldo">
                 <h3>Cristiano Ronaldo</h3>
-                <p>Renowned for his goal-scoring abilities.</p>
+                <p>Cristiano Ronaldo is celebrated as one of soccer's all-time greats, renowned for his athleticism, goal-scoring prowess, and unwavering determination. Born in Madeira, Portugal, Ronaldo began his professional career with Sporting CP before moving to Manchester United, where he won his first Ballon d'Or. His career skyrocketed during his time at Real Madrid, where he became the club's all-time leading scorer and helped secure numerous titles, including four UEFA Champions League trophies. A physical powerhouse with unparalleled work ethic, Ronaldo has also shone on the international stage, leading Portugal to victory in the 2016 UEFA European Championship and the 2019 UEFA Nations League. His enduring legacy lies in his ability to adapt, inspire, and dominate the game across leagues and generations.</p>
             </div>
         </section>
     </main>
