--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="players.html">Top Players</a>
+            <a href="player.html">Top Players</a>
             <a href="news.html">News</a>
             <a href="contact.html">Contact</a>
         </nav>
