--- a/HTML/news.html
+++ b/HTML/news.html
@@ -40,6 +40,6 @@
     <footer>
         <p>&copy; 2024 Soccer Hub</p>
     </footer>
-    <script src="js/scores.js"></script>
+    <script src="../Java Script/livescores.java"></script>
 </body>
 </html>
